--- a/config/ludorum-env.yaml
+++ b/config/ludorum-env.yaml
@@ -26,9 +26,30 @@ dependencies:
   - xz=5.4.6=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
   - pip:
-      - build==1.2.2.post1
-      - lucidium==0.0.1
-      - packaging==24.2
-      - pyproject-hooks==1.2.0
+      - filelock==3.16.1
+      - fsspec==2024.12.0
+      - jinja2==3.1.5
+      - ludorum==0.0.1
+      - markupsafe==3.0.2
+      - mpmath==1.3.0
+      - networkx==3.4.2
+      - numpy==2.2.1
+      - nvidia-cublas-cu12==12.4.5.8
+      - nvidia-cuda-cupti-cu12==12.4.127
+      - nvidia-cuda-nvrtc-cu12==12.4.127
+      - nvidia-cuda-runtime-cu12==12.4.127
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu12==11.2.1.3
+      - nvidia-curand-cu12==10.3.5.147
+      - nvidia-cusolver-cu12==11.6.1.9
+      - nvidia-cusparse-cu12==12.3.1.170
+      - nvidia-nccl-cu12==2.21.5
+      - nvidia-nvjitlink-cu12==12.4.127
+      - nvidia-nvtx-cu12==12.4.127
+      - sympy==1.13.1
       - termcolor==2.5.0
+      - torch==2.5.1
+      - tqdm==4.67.1
+      - triton==3.1.0
+      - typing-extensions==4.12.2
 prefix: /home/theokoles/miniconda3/envs/ludorum
